--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,6 +27,8 @@ $red-dark: #ec0041 !default;
 $brown-dark: #7c2f01 !default;
 $blue-dark: #023691 !default;
 
+$seiska-yellow: #FFED00 !default;
+
 //
 // Base
 // --------------------------------
