--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
   --body-background-color: #{theme.$body-bg-color};
   --body-font-family: #{theme.$body-font-family};
   --body-alt-font-family: #{theme.$body-alt-font-family};
+  --body-title-font-family: #{theme.$body-title-font-family};
   --body-font-weight-regular: #{theme.$body-font-weight-regular};
   --body-font-weight-bold: #{theme.$body-font-weight-bold};
   --body-color: #{theme.$body-color};
