--- a/src/styles/mixins/_typography.scss
+++ b/src/styles/mixins/_typography.scss
@@ -3,7 +3,7 @@
 
 @mixin video-title-base($font-size: 34px) {
   color: var(--primary-color);
-  font-family: var(--body-font-family);
+  font-family: var(--body-title-font-family);
   font-weight: var(--body-font-weight-bold);
   font-size: $font-size;
   line-height: 1em;
