--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -196,12 +196,12 @@ $aspects: ((1, 1), (2, 1), (2, 3), (4, 3), (5, 3), (16, 9), (9, 16), (9, 13));
   display: flex;
   align-items: center;
   padding: 4px 8px;
-  color: var(--card-color);
+  color: var(--card-tag-color);
   font-family: var(--body-font-family);
-  font-weight: 600;
+  font-weight: 700;
   font-size: 16px;
   white-space: nowrap;
-  background-color: rgba(variables.$black, 0.6);
+  background-color: var(--card-tag-bg);
   border-radius: 4px;
   @include responsive.mobile-only {
     font-size: 14px;
