refactor: adjust styles

--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   width: 40px;
   height: 40px;
-  outline: var(--highlight-color, white) none;
+  outline: var(--highlight-color, #FFED00) none;
 
   cursor: pointer;
   opacity: 0.7;
