--- a/src/icons/Icon.module.scss
+++ b/src/icons/Icon.module.scss
@@ -1,9 +1,9 @@
 @use 'src/styles/variables';
 
 .icon {
-  width: 24px;
-  height: 24px;
-  fill: variables.$white;
+  width: 31px;
+  height: 30px;
+  fill: variables.$seiska-yellow;
 }
 
 .profileIcon {
