--- a/src/components/VideoDetails/VideoDetails.module.scss
+++ b/src/components/VideoDetails/VideoDetails.module.scss
@@ -40,6 +40,7 @@
   width: 70%;
   max-width: 650px;
   min-height: 440px;
+  margin-top: 24px;
 
   @include responsive.desktop-small-only() {
     min-height: 335px;
