--- a/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
+++ b/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
@@ -33,7 +33,7 @@
   display: flex;
   align-items: center;
   height: 36px;
-  margin: 24px 0;
+  margin: 50px 0 10px;
 
   > h2 {
     font-family: var(--body-alt-font-family);
@@ -43,6 +43,10 @@
 
   @include responsive.mobile-and-tablet {
     justify-content: space-between;
+    margin-top: 60px;
+    h2 {
+      font-size: 16px;
+    }
   }
 }
 
