--- a/src/components/VideoDetails/VideoDetails.module.scss
+++ b/src/components/VideoDetails/VideoDetails.module.scss
@@ -11,35 +11,52 @@
 }
 
 .mainPadding {
-  padding: 37px 56px 0;
+  padding: 10px 56px 0;
 
   @include responsive.desktop-small-only() {
-    padding: 34px 36px 36px;
+    padding: 5px 36px 36px;
   }
 
   @include responsive.tablet-only() {
-    padding: 34px 24px 24px;
+    padding: 5px 24px 24px;
   }
 
   @include responsive.mobile-only() {
-    padding: 16px;
+    padding-right: 17px;
+    padding-bottom: 20px;
+    padding-left: 18px;
+  }
+}
+.seriesGradient {
+  position: relative;
+  margin: 0;
+  padding: 0;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, black 0%, transparent 50%);
   }
 }
 
 .main {
-  display: flex;
+  display: block;
   max-width: 100vw;
 
   &.hidden {
     display: none;
   }
+
+  @include responsive.desktop-only() {
+    padding-bottom: 100px;
+  }
 }
 
-.info {
-  position: relative;
+.infoEpisode {
   width: 70%;
   max-width: 650px;
-  min-height: 440px;
 
   @include responsive.desktop-small-only() {
     min-height: 335px;
@@ -53,13 +70,34 @@
   @include responsive.mobile-only() {
     width: 100%;
     min-height: 380px;
-    padding-top: 225px;
+    padding-top: 125px;
+  }
+}
+
+.infoSeriesView {
+  display: inline !important;
+  padding-top: 1px !important;
+
+  @include responsive.mobile-only() {
+    width: 100%;
   }
 }
 
 .title {
   @include typography.video-title-base;
   margin-bottom: calc(#{variables.$base-spacing} / 2);
+  font-weight: 700;
+  font-style: normal;
+  line-height: 115%;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.76);
+
+  &.episode {
+    font-size: 25px !important;
+  }
+
+  &.series {
+    font-size: 33px !important;
+  }
 }
 
 .metaContainer {
@@ -70,10 +108,13 @@
 .primaryMetadata {
   display: flex;
   align-items: center;
-  margin-bottom: 8px;
-  font-size: 16px;
-  line-height: 18px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 120%;
   letter-spacing: 0.15px;
+
   > :first-child {
     margin-right: 8px;
   }
@@ -85,7 +126,7 @@
 }
 
 .secondaryMetadata {
-  margin-top: 24px;
+  margin-top: 8px;
   margin-bottom: 8px;
   font-size: 20px;
   line-height: 20px;
@@ -106,26 +147,31 @@
   letter-spacing: 0.5px;
 }
 
-.buttonBar {
+.buttonBarEpisode {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  // margin: 0 -6px;
 
   > button {
     justify-content: center;
   }
 
   @include responsive.desktop-only() {
+    padding-top: 80px;
     > button {
-      margin: 6px;
+      margin-right: 10px;
     }
   }
 
   @include responsive.tablet-only() {
     > button {
-      margin: 5px;
+      margin: 5px 0;
+    }
+
+    > button:nth-child(2) {
+      margin-right: 10px;
+      margin-left: 0;
     }
   }
 
@@ -144,45 +190,138 @@
 
   @include responsive.mobile-only() {
     flex-wrap: wrap;
+    padding-top: 30px;
 
     > button:first-child {
       margin-bottom: 8px;
     }
 
     > button:nth-child(2) {
-      margin-right: 5px;
+      margin-right: 10px;
       margin-left: 0;
     }
   }
 }
 
-.poster {
-  position: absolute;
-  top: 0;
-  right: 0;
+.buttonBarSeries {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
 
-  z-index: -1;
+  > button {
+    justify-content: center;
+  }
 
-  width: 80vw;
-  height: calc(85vw / 16 * 9);
+  @include responsive.desktop-only() {
+    padding-top: 80px;
 
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  // fix for Safari (poster will render below the dynamic blur)
-  transform: translateZ(0);
-
-  mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%);
-  //noinspection CssInvalidPropertyValue
-  -webkit-mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%); /* stylelint-disable-line */
+    > button {
+      margin-right: 10px;
+    }
+  }
 
   @include responsive.tablet-only() {
-    width: 80vw;
-    height: calc(140vw / 16 * 9);
+    padding-right: 50%;
+
+    > button {
+      margin: 5px 0;
+    }
+
+    > button:nth-child(2) {
+      margin-right: 10px;
+      margin-left: 0;
+    }
+  }
+
+  @include responsive.mobile-and-tablet() {
+    flex-wrap: wrap;
+    padding-top: 30px;
+
+    > button {
+      flex: 1;
+      padding: 0 12px;
+
+      &:first-child {
+        flex-basis: 100%;
+      }
+    }
   }
 
   @include responsive.mobile-only() {
-    width: 110vw;
+    flex-wrap: wrap;
+    padding-top: 150px;
+
+    > button:first-child {
+      margin-bottom: 8px;
+    }
+
+    > button:nth-child(2) {
+      margin-right: 10px;
+      margin-left: 0;
+    }
+  }
+}
+
+.posterEpisode {
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  // width: 80vw;
+  width: 100%;
+
+  height: calc(85vw / 16 * 9);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, #191919 100%), url(<path-to-image>) lightgray 50% / cover no-repeat;
+  background-repeat: no-repeat;
+  // background-position: center center;
+  background-size: cover;
+
+  // fix for Safari (poster will render below the dynamic blur)
+  transform: translateZ(0);
+
+  mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%); /* stylelint-disable-line */
+
+  //noinspection CssInvalidPropertyValue
+  -webkit-mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%); /* stylelint-disable-line */
+
+  // @include responsive.tablet-only() {
+  //   height: calc(140vw / 16 * 9);
+  // }
+
+  // @include responsive.mobile-only() {
+  //   height: calc(180vw / 16 * 9);
+  // }
+}
+
+.posterSeries {
+  position: absolute;
+  left: 0;
+  // top: -37px;
+  // right: -50px;
+  z-index: -1;
+  // width: 80vw;
+  width: 100%;
+  height: calc(85vw / 16 * 9);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  transform: scale(1.1);
+  transform-origin: bottom left;
+
+  // background: linear-gradient(90deg, #191919 0%, rgba(25, 25, 25, 0) 50.13%), linear-gradient(180deg, rgba(25, 25, 25, 0) 49.83%, #191919 100%),
+  //   url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>),
+  //   lightgray 50% / cover no-repeat;
+
+  // -webkit-mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%);
+
+  // mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%) url(<path-to-image>), lightgray 50% / cover no-repeat,
+  //   url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+  // @include responsive.tablet-only() {
+  //   height: calc(140vw / 16 * 9);
+  // }
+
+  @include responsive.mobile-only() {
     height: calc(180vw / 16 * 9);
   }
 }
