--- a/src/components/VideoDetails/VideoDetails.module.scss
+++ b/src/components/VideoDetails/VideoDetails.module.scss
@@ -22,28 +22,16 @@
   }
 
   @include responsive.mobile-only() {
-    padding-right: 17px;
+    padding-right: 18px;
     padding-bottom: 20px;
     padding-left: 18px;
-  }
-}
-.seriesGradient {
-  position: relative;
-  margin: 0;
-  padding: 0;
-
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, black 0%, transparent 50%);
   }
 }
 
 .main {
   display: block;
   max-width: 100vw;
+  overflow: hidden;
 
   &.hidden {
     display: none;
@@ -55,22 +43,17 @@
 }
 
 .infoEpisode {
+  position: relative;
+  z-index: 1;
   width: 70%;
   max-width: 650px;
 
-  @include responsive.desktop-small-only() {
-    min-height: 335px;
-  }
-
   @include responsive.tablet-only() {
     width: 350px;
-    min-height: 335px;
   }
 
   @include responsive.mobile-only() {
     width: 100%;
-    min-height: 380px;
-    padding-top: 125px;
   }
 }
 
@@ -85,13 +68,15 @@
 
 .title {
   @include typography.video-title-base;
-  margin-bottom: calc(#{variables.$base-spacing} / 2);
+
   font-weight: 700;
   font-style: normal;
   line-height: 115%;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.76);
 
   &.episode {
+    position: absolute;
+    bottom: 100%;
     font-size: 25px !important;
   }
 
@@ -263,67 +248,41 @@
   }
 }
 
-.posterEpisode {
-  position: absolute;
-  left: 0;
+.imageContainer {
+  position: relative;
   z-index: -1;
-  // width: 80vw;
-  width: 100%;
+  margin: 0;
+  line-height: 0;
 
-  height: calc(85vw / 16 * 9);
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, #191919 100%), url(<path-to-image>) lightgray 50% / cover no-repeat;
-  background-repeat: no-repeat;
-  // background-position: center center;
-  background-size: cover;
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-  // fix for Safari (poster will render below the dynamic blur)
-  transform: translateZ(0);
+  &::after {
+    background: linear-gradient(to top, var(--body-background-color) 0%, transparent 70%);
+  }
 
-  mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%); /* stylelint-disable-line */
+  &:is([data-type='series']) {
+    transform: scale(1.1);
+    transform-origin: bottom left;
 
-  //noinspection CssInvalidPropertyValue
-  -webkit-mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%); /* stylelint-disable-line */
-
-  // @include responsive.tablet-only() {
-  //   height: calc(140vw / 16 * 9);
-  // }
-
-  // @include responsive.mobile-only() {
-  //   height: calc(180vw / 16 * 9);
-  // }
+    &::before {
+      background: linear-gradient(to right, var(--body-background-color) 0%, transparent 70%);
+    }
+  }
 }
 
-.posterSeries {
-  position: absolute;
-  left: 0;
-  // top: -37px;
-  // right: -50px;
-  z-index: -1;
-  // width: 80vw;
+.poster {
   width: 100%;
-  height: calc(85vw / 16 * 9);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  transform: scale(1.1);
-  transform-origin: bottom left;
-
-  // background: linear-gradient(90deg, #191919 0%, rgba(25, 25, 25, 0) 50.13%), linear-gradient(180deg, rgba(25, 25, 25, 0) 49.83%, #191919 100%),
-  //   url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>),
-  //   lightgray 50% / cover no-repeat;
-
-  // -webkit-mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%);
-
-  // mask-image: radial-gradient(farthest-corner at 80% 20%, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 60%) url(<path-to-image>), lightgray 50% / cover no-repeat,
-  //   url(<path-to-image>), lightgray 50% / cover no-repeat, url(<path-to-image>), lightgray 50% / cover no-repeat;
-
-  // @include responsive.tablet-only() {
-  //   height: calc(140vw / 16 * 9);
-  // }
-
-  @include responsive.mobile-only() {
-    height: calc(180vw / 16 * 9);
-  }
+  min-height: 300px;
+  object-fit: cover;
+  object-position: left;
+  aspect-ratio: 16 / 9;
 }
 
 .playIcon {
