--- a/src/components/Shelf/Shelf.module.scss
+++ b/src/components/Shelf/Shelf.module.scss
@@ -23,7 +23,7 @@
   font-weight: var(--body-font-weight-bold);
   font-size: 25px;
   font-style: normal;
-  line-height: 115%;
+  line-height: 1.15;
   white-space: nowrap;
   text-overflow: ellipsis;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.76);
