refactor: used decimal for line-height
Co-authored-by: Ishwor Khadka <ishworkhadka70@gmail.com>

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -151,7 +151,7 @@ $aspects: ((1, 1), (2, 1), (2, 3), (4, 3), (5, 3), (16, 9), (9, 16), (9, 13));
   font-family: var(--body-title-font-family);
   font-weight: var(--body-font-weight-bold);
   font-size: 16px;
-  line-height: 120%;
+  line-height: 1.20;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-align: center;
