refactor: used decimal for line-height in playistgrid
Co-authored-by: Ishwor Khadka <ishworkhadka70@gmail.com>

--- a/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
+++ b/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
@@ -40,7 +40,7 @@
     font-family: var(--body-title-font-family);
     font-weight: var(--body-font-weight-bold);
     font-size: 30px;
-    line-height: 115%;
+    line-height: 1.15;
   }
 
   @include responsive.mobile-and-tablet {
