--- a/src/components/VideoDetails/VideoDetails.module.scss
+++ b/src/components/VideoDetails/VideoDetails.module.scss
@@ -31,7 +31,6 @@
 .main {
   display: block;
   max-width: 100vw;
-  overflow: hidden;
 
   &.hidden {
     display: none;
@@ -43,21 +42,26 @@
 }
 
 .infoEpisode {
-  position: relative;
-  z-index: 1;
   width: 70%;
   max-width: 650px;
 
+  @include responsive.desktop-small-only() {
+    min-height: 335px;
+  }
+
   @include responsive.tablet-only() {
     width: 350px;
+    min-height: 335px;
   }
 
   @include responsive.mobile-only() {
     width: 100%;
+    min-height: 380px;
+    padding-top: 150px;
   }
 }
 
-.infoSeriesView {
+.infoSeries {
   display: inline !important;
   padding-top: 1px !important;
 
@@ -68,15 +72,13 @@
 
 .title {
   @include typography.video-title-base;
-
+  margin-bottom: calc(#{variables.$base-spacing} / 2);
   font-weight: 700;
   font-style: normal;
   line-height: 115%;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.76);
 
   &.episode {
-    position: absolute;
-    bottom: 100%;
     font-size: 25px !important;
   }
 
@@ -132,7 +134,7 @@
   letter-spacing: 0.5px;
 }
 
-.buttonBarEpisode {
+.buttonBar {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -142,21 +144,26 @@
     justify-content: center;
   }
 
+  &.episode {
+    @include responsive.mobile-only() {
+      padding-top: 30px;
+    }
+  }
+
+  &.series {
+    @include responsive.tablet-only() {
+      padding-right: 50%;
+    }
+
+    @include responsive.mobile-only() {
+      padding-top: 100px;
+    }
+  }
+
   @include responsive.desktop-only() {
     padding-top: 80px;
     > button {
       margin-right: 10px;
-    }
-  }
-
-  @include responsive.tablet-only() {
-    > button {
-      margin: 5px 0;
-    }
-
-    > button:nth-child(2) {
-      margin-right: 10px;
-      margin-left: 0;
     }
   }
 
@@ -172,42 +179,8 @@
       }
     }
   }
-
-  @include responsive.mobile-only() {
-    flex-wrap: wrap;
-    padding-top: 30px;
-
-    > button:first-child {
-      margin-bottom: 8px;
-    }
-
-    > button:nth-child(2) {
-      margin-right: 10px;
-      margin-left: 0;
-    }
-  }
-}
-
-.buttonBarSeries {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-
-  > button {
-    justify-content: center;
-  }
-
-  @include responsive.desktop-only() {
-    padding-top: 80px;
-
-    > button {
-      margin-right: 10px;
-    }
-  }
-
   @include responsive.tablet-only() {
-    padding-right: 50%;
+    flex-wrap: wrap;
 
     > button {
       margin: 5px 0;
@@ -219,23 +192,9 @@
     }
   }
 
-  @include responsive.mobile-and-tablet() {
-    flex-wrap: wrap;
-    padding-top: 30px;
-
-    > button {
-      flex: 1;
-      padding: 0 12px;
-
-      &:first-child {
-        flex-basis: 100%;
-      }
-    }
-  }
-
   @include responsive.mobile-only() {
     flex-wrap: wrap;
-    padding-top: 150px;
+    padding-top: 30px;
 
     > button:first-child {
       margin-bottom: 8px;
@@ -244,45 +203,68 @@
     > button:nth-child(2) {
       margin-right: 10px;
       margin-left: 0;
-    }
-  }
-}
-
-.imageContainer {
-  position: relative;
-  z-index: -1;
-  margin: 0;
-  line-height: 0;
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  &::after {
-    background: linear-gradient(to top, var(--body-background-color) 0%, transparent 70%);
-  }
-
-  &:is([data-type='series']) {
-    transform: scale(1.1);
-    transform-origin: bottom left;
-
-    &::before {
-      background: linear-gradient(to right, var(--body-background-color) 0%, transparent 70%);
     }
   }
 }
 
 .poster {
-  width: 100%;
-  min-height: 300px;
-  object-fit: cover;
-  object-position: left;
-  aspect-ratio: 16 / 9;
+  position: absolute;
+  z-index: -1;
+  height: calc(85vw / 16 * 9);
+  background-position: center center;
+  background-size: cover;
+
+  -webkit-mask-size: 110% 110%;
+  -webkit-mask-position: center;
+  -webkit-mask-composite: source-in;
+  mask-image: linear-gradient(to right, transparent 15%, #141523 75%), linear-gradient(to top, transparent 15%, #141523 75%);
+  mask-size: 110% 110%;
+  mask-position: center;
+  mask-composite: intersect;
+
+  &.series {
+    top: 0;
+    right: 0;
+    width: 80vw;
+    background-repeat: no-repeat;
+    // fix for Safari (poster will render below the dynamic blur)
+    transform: translateZ(0);
+    -webkit-mask-image: linear-gradient(to right, transparent 15%, #141523 75%), linear-gradient(to top, transparent 15%, #141523 75%);
+
+    @include responsive.tablet-only() {
+      height: calc(140vw / 16 * 9);
+    }
+
+    @include responsive.mobile-only() {
+      height: calc(180vw / 16 * 9);
+    }
+  }
+
+  &.episode {
+    left: 0;
+    width: 100%;
+    min-height: 300px;
+    object-fit: cover;
+    object-position: left;
+    background-repeat: no-repeat;
+    transform: scale(1.1);
+    transform-origin: bottom left;
+
+    -webkit-mask-image: linear-gradient(to top, transparent 15%, #141523 75%);
+
+    &:is([data-type='series']) {
+      transform: scale(1.1);
+      transform-origin: bottom left;
+
+      @include responsive.tablet-only() {
+        height: calc(140vw / 16 * 9);
+      }
+
+      @include responsive.mobile-only() {
+        height: calc(180vw / 16 * 9);
+      }
+    }
+  }
 }
 
 .playIcon {
