--- a/src/components/VideoDetails/VideoDetails.module.scss
+++ b/src/components/VideoDetails/VideoDetails.module.scss
@@ -75,7 +75,7 @@
   margin-bottom: calc(#{variables.$base-spacing} / 2);
   font-weight: 700;
   font-style: normal;
-  line-height: 115%;
+  line-height: 1.15;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.76);
 
   &.episode {
@@ -99,7 +99,7 @@
   margin-bottom: 6px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 120%;
+  line-height: 1.2;
   letter-spacing: 0.15px;
 
   > :first-child {
