style: changed background color to gray as in design

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -5,11 +5,11 @@
 $primary-color: variables.$white !default;
 $secondary-color: variables.$blue !default;
 $dark-color: #2b2c39 !default;
-$seiska-yellow: #FFED00 !default;
+$seiska-yellow: #ffed00 !default;
 
 // Body
 
-$body-bg-color: #141523 !default;
+$body-bg-color: #191919 !default;
 $body-color: variables.$white !default;
 
 // Typography
