style: changed card loading color to gray-dark

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -3,7 +3,7 @@
 // Colors
 
 $primary-color: variables.$white !default;
-$secondary-color: variables.$blue !default;
+$secondary-color: variables.$gray-dark !default;
 $dark-color: #2b2c39 !default;
 $seiska-yellow: #ffed00 !default;
 
