--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -144,7 +144,7 @@ $aspects: ((1, 1), (2, 1), (2, 3), (4, 3), (5, 3), (16, 9), (9, 16), (9, 13));
 
 .title {
   height: 2.4em;
-  overflow: hidden;
+  // overflow: hidden;
   color: var(--card-color);
   font-family: var(--body-alt-font-family);
   font-weight: 600px;
