--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -4,42 +4,40 @@
 
 .searchBar {
   position: relative;
-  height: variables.$search-height;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 27px;
+  border-radius: 5px;
   @include responsive.mobile-only() {
-    height: 24px;
-    margin-top: 6px;
+  height: 28px;
   }
 }
 
 .icon {
   position: absolute;
-  margin: 6px 8px;
+  width: 18px;
+  height: 18px;
+  margin: 5px 6px;
   pointer-events: none;
-  @include responsive.mobile-only() {
-      width: 18px;
-      height: 18px;
-  }
 }
 
 .input {
   display: inline-block;
   width: 100%;
   height: 100%;
-  padding: 0 36px 0 36px;
-
-  color: currentColor;
-  font-weight: var(--body-font-weight-bold);
-  font-size: 16px;
-
+  padding: 0 36px 0 26px;
+  color: rgba(255, 237, 0, 0.50);
+  font-weight: 600;
+  font-size: 14px;
   background: rgba(variables.$black, 0.54);
-
-  border: 1px solid rgba(variables.$seiska-yellow, 0.32);
-  border-radius: 4px;
+  border: 1px solid variables.$seiska-yellow;
+  border-radius: 5px;
 
   transition: border 0.1s ease, background 0.1s ease;
 
   &::-webkit-input-placeholder {
-    color: currentColor;
+    color: rgba(255, 237, 0, 0.50);
     opacity: 0.5;
   }
 
@@ -48,14 +46,11 @@
     border-color: variables.$white;
     outline: none;
   }
-  @include responsive.mobile-only() {
-      font-size: 14px;
-  }
+  
 }
 
 .clearButton {
   position: absolute;
-  top: -2px;
   right: 0;
 
   > svg {
