--- a/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
+++ b/src/pages/ScreenRouting/playlistScreens/PlaylistGrid/PlaylistGrid.module.scss
@@ -45,7 +45,7 @@
 
   @include responsive.mobile-and-tablet {
     justify-content: space-between;
-    margin-top: 60px;
+    margin: 0;
     h2 {
       font-size: 16px;
     }
