--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -2,12 +2,11 @@
 @use 'src/styles/theme';
 
 .iconButton {
-  // display: inline-flex;
-  position: relative;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 40px;
-  height: 0;
+  height: 40px;
   outline: var(--highlight-color, white) none;
 
   cursor: pointer;
