--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,8 @@
 // Header container
 //
 .container {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +16,7 @@
   padding: 10px 0 0;
   color: variables.$seiska-yellow;
   text-align: center;
+  background-color: var(--body-background-color);
 }
 
 //
