fix: navbar problems in a certain viewport

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,7 +61,7 @@
   > a {
     height: 22px;
     min-height: 22px;
-    margin: 0 28px 0 0;
+    margin-right: 22px;
     padding: 0 calc(#{variables.$base-spacing} / 2);
     font-weight: var(--body-font-weight-bold);
     font-size: 16px;
