fix: headerbar paddings

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   height: 51px;
-  padding: 10px 0 0;
+  padding: 10px 0 8px;
   color: variables.$seiska-yellow;
   text-align: center;
   background-color: var(--body-background-color);
