--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,6 @@
 // Header container
 //
 .container {
-  position: relative;
   z-index: 3;
   display: flex;
   justify-content: center;
@@ -39,12 +38,11 @@
 }
 
 .mobileOnly {
-  display:none;
+  display: none;
   @include responsive.mobile-and-tablet() {
     display: inherit;
   }
 }
-
 
 //
 // Header brand
@@ -65,7 +63,7 @@
     padding: 0 calc(#{variables.$base-spacing} / 2);
     font-weight: var(--body-font-weight-bold);
     font-size: 16px;
-    line-height: 1.20;
+    line-height: 1.2;
     text-align: center;
   }
 }
@@ -113,7 +111,6 @@
 // --------------------------------
 
 @include responsive.tablet-only() {
-
   .container {
     display: flex;
     justify-content: space-between;
@@ -142,17 +139,14 @@
     display: flex;
     align-self: center;
   }
-
 }
 
 @include responsive.mobile-only() {
-
   .container {
     display: grid;
     grid-template-columns: 0.5fr 2fr 0.5fr;
     grid-template-rows: auto;
-    grid-template-areas: 
-    'menu actions hamburger';
+    grid-template-areas: 'menu actions hamburger';
   }
 
   .hamburger {
@@ -182,5 +176,4 @@
     grid-area: actions;
     justify-self: center;
   }
-
 }
